--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@ html{
 body{
   margin: 100px auto 0 auto;
   width: 80%;
-  text-align: center;
-  font-family: fantasy;
+  text-align: right;
+  font-family: "courier", monospace;
 }
 canvas {
-  margin: 0 auto 0 auto;
-  display: block;
-  border: 5px solid black;
+  margin: auto;
+  top: 0;
+  left: 0;
+position: absolute;
+z-index: -1;
 }
